--- a/views/Dashboard.ejs
+++ b/views/Dashboard.ejs
@@ -436,15 +436,16 @@
 
 
             <div class="dropdown">
-                <a href="/profile">Profile</a>
-                <a href="/settings">Settings</a>
-                <a href="/logout">logout</a>
-
-
-                <a href="/login">Login</a>
-
-                <!-- <a href="/login">Login</a> -->
-                <!-- <a href="#" onclick="logout()">Logout</a> -->
+                
+                    <a href="/profile">Profile</a>
+                    <a href="/settings">Settings</a>
+                    <% if(authenticated){ %>
+                        <a href="/logout">logout</a>
+        
+                        <% }else{ %>
+        
+                            <a href="/login">Login</a>
+                            <%}%>
             </div>
         </div>
     </header>
@@ -644,7 +645,7 @@
                                         <td>
                                             <%= delivered.ShippingAddress %>
                                         </td>
-                                        
+
                                     </tr>
                                     <% }); %>
                             </tbody>
