profile and update section change

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -84,8 +84,8 @@
     <div class="login-page">
         <div class="form">
             <form class="login-form" action="/login" method="post">
-                <input type="email"    name="email" placeholder="Email" required />
-                <input type="password" name="password" placeholder="Password" required />
+                <input type="email"    name="email"    value="mk772542@gmail.com" placeholder="Email" required />
+                <input type="password" name="password" value="123"  placeholder="Password" required />
                 <button type="submit">Login</button>
                 <p class="message">Not registered? <a href="signup" target="_blank">Create an account</a></p>
             </form>
